--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "homepage": "https://github.com/PandaGame1337/Priut#readme",
     "devDependencies": {
+        "bootstrap": "^4.5.3",
         "browser-sync": "^2.26.13",
         "gulp": "^4.0.2",
         "gulp-autoprefixer": "^7.0.1",
